8月23号做WoDe页面

--- a/Class/Home/BuyGoods.html
+++ b/Class/Home/BuyGoods.html
@@ -177,6 +177,8 @@
 								plus.nativeUI.toast(res['res']);
 								if(res['res']==='OK'){
 									mui.back()
+								}else{
+									that.pushto('../Login/login.html','登入')
 								}
 							}, function(err) {
 								plus.nativeUI.toast(err);
