--- a/Class/WoDe/WoDe.html
+++ b/Class/WoDe/WoDe.html
@@ -46,16 +46,16 @@
 								<span>我的订单</span>
 							</a>
 						</li>
-						<li class="mui-table-view-cell" @click="ReceiveInfo">
+						<!--<li class="mui-table-view-cell" @click="ReceiveInfo">
 							<a class="mui-navigate-right">
 								<span>收件信息</span>
 							</a>
-						</li>
-						<li class="mui-table-view-cell" @click="MyWallet">
+						</li>-->
+						<!--<li class="mui-table-view-cell" @click="MyWallet">
 							<a class="mui-navigate-right">
 								<span>我的钱包</span>
 							</a>
-						</li>
+						</li>-->
 						<li class="mui-table-view-cell" @click="FeedBack">
 							<a class="mui-navigate-right">
 								<span>意见反馈</span>
