--- a/Class/Home/TecDetail.html
+++ b/Class/Home/TecDetail.html
@@ -171,7 +171,7 @@
 					},
 					pushto(id, title,params) {
 						var a = Math.random().toString();
-						var b = Math.random().toString();
+						var b = Date.parse(new Date()).toString();
 						mui.openWindowWithTitle({
 							url: id,
 							id: id+a+b,
