--- a/Class/WoDe/EditPortrait.html
+++ b/Class/WoDe/EditPortrait.html
@@ -15,28 +15,28 @@
 		<link rel="stylesheet" type="text/less" href="../../css/WoDe/personInfo.less" />
 		<script src="../../js/less.js" type="text/javascript"></script>
 		<script type='application/javascript' src='../../js/fastclick.js'></script>
-		
+
 	</head>
 
 	<body>
 		<div class="mui-content" id="editContainer">
 			<form class="mui-input-group">
 				<ul class="mui-table-view">
-					<li class="mui-table-view-cell first"><span>头像</span>
-						<img src="../../reaource/ceshi1.jpg" /></li>
+					<li class="mui-table-view-cell first" @click="choosePortrait"><span>头像</span>
+						<img :src="userInfo.Client_HeadImgUrl" /></li>
 					<li class="mui-table-view-cell ">
 						<span>昵称</span>
-						<input type="text" placeholder="">
+						<input type="text" :placeholder="userInfo.Client_NickName">
 					</li>
 					<li class="mui-table-view-cell">
 						<span>性别</span>
-						<input type="text" placeholder="">
+						<input type="text" :placeholder="userInfo.Client_Sex">
 					</li>
 					<li class="mui-table-view-cell">
 						<span>所在地</span>
-						<input type="text" placeholder="">
+						<input type="text" :placeholder="userInfo.Client_Address">
 					</li>
-
+<!--{{userInfo}}-->
 				</ul>
 				<div class="mui-button-row">
 					<button type="button" class="mui-btn mui-btn-primary">确认</button>
@@ -44,6 +44,7 @@
 			</form>
 		</div>
 	</body>
+	<script src="../../js/require.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		mui.init({
 			swipeBack: true, //启用右滑关闭功能,
@@ -62,25 +63,49 @@
 		var app2 = new Vue({
 			el: "#editContainer",
 			data: {
-				jifen: "111"
+				jifen: "111",
+				userInfo:{},
+				imgPath:'',
+				Client_RealName:'',
 
 			},
 			methods: {
+				choosePortrait(){
+					var that = this
+					plus.gallery.pick( function(imgPath){
+						that.imgPath = imgPath;
+						console.log(imgPath);
+					}, function(err){
+						console.log( err );
+					}, {filter:"image"});
+				},
+				submit() {
+					var foo = plus.storage.getItem('szsftoken');
+					var para = {}
 
+					httprequest.modifyMyInfo(foo,para)
+				}
 			},
 			computed: {
 
 			},
-			watch: {
-
+			mounted() {
+				var self = plus.webview.currentWebview();
+				this.userInfo = self.userInfo;
+				var that = this;
+				var foo = plus.storage.getItem('szsftoken');
+				if(foo == null) {
+					this.pushto('../Login/login.html', "登入");
+				}
 			}
 		})
 	</script>
-<script type="text/javascript">
-			if('addEventListener' in document) {
-				document.addEventListener('DOMContentLoaded', function() {
-					FastClick.attach(document.body);
-				}, false);
-			}
-		</script>
+	<script type="text/javascript">
+		if('addEventListener' in document) {
+			document.addEventListener('DOMContentLoaded', function() {
+				FastClick.attach(document.body);
+			}, false);
+		}
+	</script>
+
 </html>
