删除注释之前

--- a/Class/Home/pullrefresh_sub.html
+++ b/Class/Home/pullrefresh_sub.html
@@ -60,11 +60,11 @@
 							</a>
 						</div>
 						<!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
-						<div class="mui-slider-item mui-slider-item-duplicate">
+						<!--<div class="mui-slider-item mui-slider-item-duplicate">
 							<a >
 								<img src="../../reaource/ceshi1.jpg" data-preview-src="" data-preview-group="1">
 							</a>
-						</div>
+						</div>-->
 					</div>
 				</div>
 				<div class="mid">
@@ -143,10 +143,8 @@
 									</a>
 								</div>
 							</div>
-
 						</div>
 					</div>
-
 					<ul id="listView">
 						<!--{{cellArr}}-->
 						<li @click="cellClicked(item.id)" class="cellItem" v-for="(item,index) in cellArr">
