--- a/Class/WoDe/personInfo.html
+++ b/Class/WoDe/personInfo.html
@@ -21,9 +21,9 @@
 	<body>
 		<div class="mui-content" id="container">
 			<ul class="mui-table-view">
-				<li class="mui-table-view-cell first" @click=""><span>头像</span>
+				<!--<li class="mui-table-view-cell first" @click=""><span>头像</span>
 					<img :src="userInfo.Client_HeadImgUrl" /></li>
-				<li class="mui-table-view-cell "><span>昵称</span> <span style="float: right;">{{userInfo.Client_NickName}}</span></li>
+				<li class="mui-table-view-cell "><span>昵称</span> <span style="float: right;">{{userInfo.Client_NickName}}</span></li>-->
 				<!--<li class="mui-table-view-cell"><span>性别</span><span>{{userInfo.Client_Sex}}</span></li>
 				<li class="mui-table-view-cell"><span>所在地</span><span>{{userInfo.Client_Province}}{{userInfo.Client_City}}</span></li>-->
 				<li class="mui-table-view-cell"><span>手机号</span><span>{{userInfo.Tel_No}}</span></li>
