--- a/Class/Login/reg.html
+++ b/Class/Login/reg.html
@@ -37,11 +37,11 @@
 			
 			.mui-content-padded {
 				background-color: transparent;
-				margin-top: 25px;
+				/*margin-top: 25px;*/
 			}
-			
+			 
 			.mui-btn {
-				padding: 10px;
+				/*padding: 10px;*/
 			}
 			
 			#yanzhengma {
@@ -99,10 +99,10 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<!--<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">注册</h1>
-		</header>
+		</header>-->
 		<div class="mui-content" id="container">
 			<form class="mui-input-group">
 				<div class="mui-input-row">
